# apex-dialer

./: .env.template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: backend-ci.yml  dashboard-ci.yml  infra-ci.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/: deps.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_health.py
dashboard/: .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/lib/: api.ts  events.ts  types.ts
dashboard/src/pages/: Home.tsx
docs/: api-contract.md  architecture.md  runbook.md
infrastructure/: README.md
infrastructure/nginx/: Dockerfile  nginx.conf
infrastructure/postgres/: init.sql  postgresql.conf
infrastructure/prometheus/: prometheus.yml
scripts/: dev.sh  gen-api-types.sh  migrate.sh
