[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-backend"
version = "0.1.0"
description = "Apex Dialer backend — FastAPI + Asterisk + AI voice stack"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Javier G." }]

dependencies = [
  "fastapi>=0.111,<0.115",
  "uvicorn[standard]>=0.30,<0.32",
  "sqlalchemy[asyncio]>=2.0.30,<3",
  "asyncpg>=0.29,<0.30",
  "alembic>=1.13,<2",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "structlog>=24.1,<25",
  "prometheus-client>=0.20,<0.21",
  "panoramisk>=1.4,<2",
  "deepgram-sdk>=3.2,<4",
  "groq>=0.9,<1",
  "edge-tts>=6.1,<7",
  "piper-tts>=1.2,<2",
  "redis>=5.0,<6",
  "httpx>=0.27,<0.28",
  "python-jose[cryptography]>=3.3,<4",
  "passlib[bcrypt]>=1.7,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<0.24",
  "pytest-cov>=5.0,<6",
  "ruff>=0.5,<0.6",
  "black>=24.4,<25",
  "mypy>=1.10,<2",
  "types-redis>=4.6,<5",
  "httpx>=0.27,<0.28",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ---- Ruff ----
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "ARG", "PL", "RUF"]
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "PLR2004", "S101"]

# ---- Black ----
[tool.black]
line-length = 100
target-version = ["py311"]

# ---- Pytest ----
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
python_files = ["test_*.py"]

# ---- Mypy ----
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["panoramisk.*", "edge_tts.*", "piper.*"]
ignore_missing_imports = true
